installed hash passwords and created user database

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "lib/mongodb.js",
+    "src/app/lib/mongodb.ts",
     "pages/api/recipes.js"
   ],
   "exclude": ["node_modules"]
