--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "bcryptjs": "^2.4.3",
     "mongodb": "^6.12.0",
+    "mongoose": "^8.9.5",
     "next": "15.1.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
