make sure you specify which db you are using

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,8 @@
     "**/*.tsx",
     ".next/types/**/*.ts",
     "src/app/lib/mongodb.ts",
-    "pages/api/recipes.js"
+    "pages/api/recipes.js",
+    "pages/api/recipe-album"
   ],
   "exclude": ["node_modules"]
 }
