--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "src/app/lib/mongodb.ts",
+    "lib/mongodb.ts",
     "pages/api/recipes.js",
     "pages/api/recipe-album"
   ],
