--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.12.0",
     "mongoose": "^8.9.5",
+    "multer": "^1.4.5-lts.1",
     "next": "15.1.5",
     "next-cloudinary": "^6.16.0",
     "react": "^19.0.0",
